samples/_failures_safe/1761435344_f72154_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a6162a7.c: In function ‘main’:
./samples/SAFE/__tmp_3a6162a7.c:172:1: error: expected declaration or statement at end of input
  172 | int main(void) {
      | ^~~
